compiler/testData/diagnostics/testsWithStdLib/annotations/Volatile.kt
import kotlin.jvm.Volatile

class My {
    <!VOLATILE_ON_VALUE!>@Volatile<!> val x = 0
    // ok
    @Volatile var y = 1
}